crates/keron-lang/tests/corpus/errors/check/for_as_value_in_annotated_val.keron
val x: Int = for k in [1, 2] {}
